--- a/resources/style.css
+++ b/resources/style.css
@@ -1,5 +1,5 @@
 h1 {
-    font-family: Verdana;
+    font-family: Verdana !important;
     font-weight: normal;
     font-size: 50px;
     color: white;
@@ -8,4 +8,36 @@ h1 {
 
 body {
     background-color: black;
+    font-family: Verdana;
+    text-align: center;
+}
+
+h2 {
+    color: aquamarine;
+    font-size: 16px;
+}
+
+a {
+    color: aquamarine;
+    font-size: 16px;
+    font-family: Verdana;
+    font-weight: normal;
+}
+
+h3 {
+    font-size: 42px;
+    font-family: Verdana;
+    font-weight: 300;
+    color: white;
+}
+
+p {
+    font-size: 21px;
+    font-family: Verdana;
+    color: gray;
+}
+
+footer {
+    text-align: right;
+    color: gray;
 }
